testCases/t4LogFile.txt
SYMBOL TABLE DUMP

Level: 0 Key: argc Line: 10 Type: 0
Level: 0 Key: argv Line: 10 Type: 0
Level: 0 Key: i Line: 7 Type: 0
Level: 0 Key: main Line: 10 Type: 0
Level: 1 Key: j Line: 12 Type: 0


SYMBOL TABLE ABOVE

SYMBOL TABLE DUMP

Level: 0 Key: argc Line: 10 Column: 14 Type: 0
Level: 0 Key: argv Line: 10 Column: 26 Type: 0
Level: 0 Key: i Line: 7 Column: 6 Type: 0
Level: 0 Key: main Line: 10 Column: 5 Type: 0
Level: 1 Key: j Line: 12 Column: 12 Type: 0


SYMBOL TABLE ABOVE

ERROR: testCases/t4.c:Line: 13 Column: 12 Conflicts with variable in current scope on line : 12
	int j;
------------^ 

